[package]
name = "ngenrs"
version = "0.1.0"
edition = "2024"

[lib]
name = "ngenrs"
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.18.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.18.0"
aes = "0.8"
block-modes = "0.9"

[env]
NDK_HOME = { value = "~/Library/Android/sdk/ndk/28.0.13004108/" }

[target.aarch64-linux-android]
ar = "${NDK_HOME}/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android-ar"
linker = "${NDK_HOME}/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android21-clang"

[target.aarch64-apple-ios]
linker = "xcrun -sdk iphoneos clang"

[target.aarch64-apple-darwin]
linker = "clang"