[package]
name = "ngenrs"
version = "0.1.0"
edition = "2024"

[lib]
name = "ngenrs"
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }
redb = "2.4.0"
hex = "0.4.3"
aes = "0.8.4"
block-modes = "0.9.1"
rsa = "0.9.8"
rand = "0.9.0"
md5 = "0.7.0"
sha1 = "0.10.8"
sha2 = "0.10.6"
base64 = "0.22.1"
flate2 = { version = "1.0", features = ["zlib"] }

[env]
NDK_HOME = { value = "~/Library/Android/sdk/ndk/28.0.13004108/" }

[target.aarch64-linux-android]
ar = "${NDK_HOME}/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android-ar"
linker = "${NDK_HOME}/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android21-clang"

[target.aarch64-apple-ios]
linker = "xcrun -sdk iphoneos clang"

[target.aarch64-apple-darwin]
linker = "clang"