[package]
name = "ngenrs"
version = "0.1.0"
edition = "2024"

[lib]
name = "ngenrs"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "qjsc"
path = "src/bin/qjsc.rs"

[dependencies]
libc = "0.2.171"
once_cell = "1.21.3"
serde_json = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream", "native-tls"] }
tokio = { version = "1.0", features = ["full"] }
redb = "2.4.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
hex = "0.4.3"
block-modes = "0.8.1"
aes = "0.7.5"
rsa = "0.8.0"
rand = "0.9.0"
md5 = { package = "md-5", version = "0.10" }
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22.1"
flate2 = { version = "1.0", features = ["zlib"] }
mlua = { version = "0.8", features = ["lua54", "vendored"] }
libquickjs-ng-sys = "0.8"

[target.aarch64-linux-android]
ar = "${env.ANDROID_NDK_ROOT}/toolchains/llvm/prebuilt/darwin-x86_64/bin/llvm-ar"
linker = "${env.ANDROID_NDK_ROOT}/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android21-clang"
rustflags = ["-C", "link-arg=-shared"] 

[target.aarch64-unknown-linux-ohos]
ar = "${env.HARMONYOS_NDK_ROOT}/llvm/bin/llvm-ar"
linker = "${env.HARMONYOS_NDK_ROOT}/llvm/bin/aarch64-unknown-linux-ohos-clang"
rustflags = ["-C", "link-arg=-shared"] 

[target.aarch64-apple-ios]
linker = "xcrun -sdk iphoneos clang"
rustflags = [
  "-C", "link-arg=-static",
  "-C", "link-arg=-fembed-bitcode",
  "-C", "link-arg=-isysroot",
  "-C", "link-arg=$(xcrun --sdk iphoneos --show-sdk-path)"
]

[target.aarch64-apple-darwin]
linker = "clang"
rustflags = ["-C", "link-arg=-static"]

[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-arg=--import-memory",
  "-C", "link-arg=--initial-memory=65536",
  "-C", "link-arg=--max-memory=65536",
  "-C", "link-arg=--export-table"
]

[target.x86_64-pc-windows-msvc]
ar = "x86_64-w64-mingw32-ar"
linker = "x86_64-w64-mingw32-gcc"
rustflags = ["-C", "link-arg=-static"]